--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Pixel Design</title>
-        <link rel="stylrsheet" href="style.css"/>
+        <link rel="stylesheet" href="style.css"/>
     </head>
     <body>
         <header>
